--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Deterministic Physics Car Simulator",
   "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "build": "tsc",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "jest",
     "lint": "eslint src/**/*.ts"
   },
@@ -15,16 +16,14 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "@types/three": "^0.171.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^6.0.0"
   },
   "dependencies": {
-    "@types/express": "^5.0.6",
-    "@types/socket.io": "^3.0.2",
-    "express": "^5.2.1",
-    "open": "^11.0.0",
-    "socket.io": "^4.8.3"
+    "three": "^0.171.0"
   }
 }
