--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,14 @@
         "module": "commonjs",
         "strict": true,
         "esModuleInterop": true,
+        "resolveJsonModule": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "outDir": "./dist"
     },
     "include": [
         "src/**/*",
-        "tests/**/*"
+        "vite.config.ts"
     ],
     "exclude": [
         "node_modules"
